# mx-agent

./: .gitignore  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  clippy.toml  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.claude/commands/: assess-feature-completeness.md  e2e_tests.md  implement.md  issue.md  issues.md  plan.md  prime.md  review.md  tests.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  security.yml
.github/workflows/: audit.yml  ci.yml  populate-github.yml  project-sync.yml  release.yml  wiki-sync.yml
.pi/prompts/: document.md  implement.md  issue.md  issues.md  patch.md  prime.md  resolve_failed_test.md  review.md  review_phase.md
adw/: README.md  __init__.py  _exec.py  _git.py  _orchestrator.py  _phases.py  _runner.py  _state.py  common.py  e2e_tests.py  implement.py  issue.py  issues.py  issues.sh  plan.py  prime.py  review.py  state.schema.json  test_common.py  test_cross_language_state.py  test_exec.py  test_git.py  test_issue.py  test_issues.py  test_orchestrator.py  test_phase_contracts.py  test_phases.py  test_state.py  test_work_issue.py  tests.py  work_issue.py  work_issue.sh
adw_sdlc/: PARITY.md  PLAN.md  package.json
adw_sdlc/src/: cli.ts  common.ts  env.ts  index.ts  invoker.ts  issue.ts  models.ts  orchestrator.ts  phases.ts  pricing.ts  registry.ts  run-phase.ts  schemas.ts  state.ts  structured-call.ts
adw_sdlc/src/runners/: runner-claude.ts  runner-codex.ts  runner-opencode.ts
adw_sdlc/test/: cli-py-engine.test.ts  cli.test.ts  cross-language-state.test.ts  engine-parity.test.ts  env.test.ts  issue.test.ts  models-pricing.test.ts  orchestrator.test.ts  registry.test.ts  run-phase.test.ts  runner-claude.test.ts  runner-codex-spawn.test.ts  runner-codex.test.ts  runner-opencode.test.ts  scaffold.test.ts  schemas.test.ts  state.test.ts
crates/mx-agent-cli/: Cargo.toml
crates/mx-agent-cli/src/: cli.rs  main.rs  stream.rs  terminal.rs
crates/mx-agent-cli/tests/: daemon_lifecycle.rs  doc_drift.rs  sandbox_exec.rs
crates/mx-agent-daemon/: Cargo.toml
crates/mx-agent-daemon/src/: agent.rs  approval.rs  artifact.rs  audit.rs  call.rs  call_ipc.rs  context.rs  device_ipc.rs  event_router.rs  exec.rs  exec_ipc.rs  exec_subscribers.rs  heartbeat.rs  inflight.rs  invocation.rs  ipc.rs  lib.rs  lifecycle.rs  matrix.rs  policy.rs  pty.rs  pty_ipc.rs  recovery_ipc.rs  replay.rs  result_verify.rs  runner.rs  scheduler.rs  scheduler_loop.rs  session.rs  signing.rs  stream.rs  sync.rs  task.rs  task_diagnostics.rs  task_dispatch.rs  task_dispatch_matrix.rs  task_graph.rs  task_orchestrator.rs  tool_exec.rs  tools.rs  (+5 more)
crates/mx-agent-daemon/tests/: chaos.rs  device_verify_ipc_e2e.rs  matrix_integration.rs  pty_ipc_loopback.rs  task_orchestration_e2e.rs
crates/mx-agent-ipc/: Cargo.toml
crates/mx-agent-ipc/src/: client.rs  frame.rs  lib.rs  peercred.rs  rpc.rs  server.rs  socket.rs
crates/mx-agent-ipc/tests/: rpc_over_socket.rs
crates/mx-agent-policy/: Cargo.toml
crates/mx-agent-policy/src/: engine.rs  file.rs  lib.rs
crates/mx-agent-protocol/: Cargo.toml
crates/mx-agent-protocol/src/: canonical_json.rs  events.rs  id.rs  lib.rs  schema.rs  signing.rs
crates/mx-agent-sandbox/: Cargo.toml
crates/mx-agent-sandbox/src/: launcher.rs  lib.rs  seccomp.rs
crates/mx-agent-telemetry/: Cargo.toml
crates/mx-agent-telemetry/src/: lib.rs
dev/matrix/: .env.example  README.md  docker-compose.yml  tuwunel.toml
docs/: alpha-release-checklist.md  architecture-gimini.md  architecture.md  cli-reference.md  github-issue-backlog.md  github-management.md  roadmap-rust.md  security-hardening.md  user-guide.md
scripts/: check-adw-sdlc-env.sh  check-doc-claims.sh  gen-cli-artifacts.sh  install-wiki-hook.sh  issue.sh  issues.sh  matrix_dev.sh  matrix_integration_test.sh  populate_github.py  sync-wiki.sh  test_check_doc_claims.sh  test_ci_yml.sh  test_ci_yml_checks.sh  test_doc_sandbox_nits.sh  test_release_yml.sh  wire_project.sh  work_issue.sh
specs/: adw-python-orchestrated-phased-pipeline.md  issue-155-daemon-mediated-exec-ipc.md  issue-156-daemon-task-orchestration.md  issue-157-task-ipc-routing.md  issue-158-structured-task-actions.md  issue-159-task-lifecycle-validation.md  issue-160-task-scheduler-loop.md  issue-164-stable-task-result-schema.md  issue-165-task-action-policy.md  issue-166-signed-task-action-authorization.md  issue-170-task-dag-diagnostics.md  issue-192-daemon-matrix-event-router.md  issue-193-daemon-ipc-call.md  issue-194-live-matrix-call.md  issue-195-daemon-ipc-exec.md  issue-196-live-matrix-remote-exec.md  issue-197-matrix-stream-subscriber-forwarding.md  issue-198-matrix-stdin-cancel.md  issue-199-live-task-scheduler-loop.md  issue-200-task-orchestration-live-call-exec.md  issue-201-cli-command-groups-behind-ipc.md  issue-221-scheduler-restart-recovery-stale-snapshot.md  issue-222-call-request-replay-expiry-protection.md  issue-223-wire-approval-gate-into-live-scheduler.md  issue-226-readme-status-corrections.md  issue-238-interactive-pty-over-ipc-remote.md  issue-239-unify-task-remote-invocation-id.md  issue-240-production-e2ee-hardening.md  issue-244-signed-pty-resize.md  issue-248-sandbox-paths-network-wiring.md  issue-249-workspace-create-e2ee.md  issue-250-periodic-heartbeat-and-liveness.md  issue-257-audit-named-call-decisions.md  issue-258-device-verify-decision-deadline.md  issue-259-device-verify-confirm-cancel-ipc-methods.md  issue-260-e2ee-restart-keybackup-sas-integration-tests.md  issue-262-sandbox-named-call-tool-execution.md  issue-263-named-call-requires-approval.md  issue-264-signed-sender-verified-approval-decisions.md  issue-265-enforce-approval-expires-at.md  (+39 more)
wiki/: AI-Agent-Orchestration.md  Core-Concepts.md  Getting-Started.md  Home.md  Security-and-Sandboxing.md  Stream-and-Protocol-Spec.md  _Sidebar.md
