[workspace]
resolver = "2"
members = [
    "crates/mx-agent-cli",
    "crates/mx-agent-daemon",
    "crates/mx-agent-protocol",
    "crates/mx-agent-ipc",
    "crates/mx-agent-policy",
    "crates/mx-agent-sandbox",
    "crates/mx-agent-telemetry",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
# MSRV is enforced by the `msrv` CI job (issue #315). matrix-sdk 0.18 declares
# rust-version 1.93, which is the real workspace floor; the historically
# declared 1.74 was never actually built. Keep this in lockstep with
# clippy.toml `msrv` and the `msrv` job's `toolchain:` in .github/workflows/ci.yml.
rust-version = "1.93"
license = "Apache-2.0"
repository = "https://github.com/kortiene/mx-agent"
authors = ["mx-agent contributors"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = "1.2"
toml = "1"
url = "2.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
matrix-sdk = { version = "0.18", default-features = false }
mime = "0.3"
ed25519-dalek = { version = "2", features = ["std"] }
sha2 = "0.11"
base64 = "0.22"
getrandom = "0.4"
nix = { version = "0.31", features = ["signal", "process", "user"] }
rustix = { version = "1", default-features = false, features = ["std", "pty", "termios"] }
signal-hook = "0.4"
mx-agent-protocol = { path = "crates/mx-agent-protocol", version = "0.2.1" }
mx-agent-telemetry = { path = "crates/mx-agent-telemetry", version = "0.2.1" }
mx-agent-ipc = { path = "crates/mx-agent-ipc", version = "0.2.1" }
mx-agent-policy = { path = "crates/mx-agent-policy", version = "0.2.1" }
mx-agent-sandbox = { path = "crates/mx-agent-sandbox", version = "0.2.1" }
mx-agent-daemon = { path = "crates/mx-agent-daemon", version = "0.2.1" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
strip = true
