[package]
name = "mx-agent-cli"
description = "The mx-agent command-line interface."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "mx-agent"
path = "src/main.rs"

[dependencies]
mx-agent-protocol.workspace = true
mx-agent-telemetry.workspace = true
mx-agent-daemon.workspace = true
mx-agent-ipc.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["signal"] }
base64 = { workspace = true }
sha2 = { workspace = true }
rustix = { workspace = true }
signal-hook = { workspace = true }

[lints]
workspace = true
