[package]
name = "mx-agent-daemon"
description = "Long-running daemon: Matrix sync, crypto, policy, and process supervision."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
mx-agent-protocol.workspace = true
mx-agent-ipc.workspace = true
mx-agent-policy.workspace = true
mx-agent-sandbox.workspace = true
mx-agent-telemetry.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
nix = { workspace = true }
signal-hook = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
matrix-sdk = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util"] }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }

[dev-dependencies]
tracing-subscriber.workspace = true

[lints]
workspace = true
