[package]
name = "mx-agent-daemon"
description = "Long-running daemon: Matrix sync, crypto, policy, and process supervision."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
mx-agent-protocol.workspace = true
mx-agent-ipc.workspace = true
mx-agent-policy.workspace = true
mx-agent-sandbox.workspace = true
mx-agent-telemetry.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
# `fs` gates `nix::fcntl::Flock` (a safe RAII `flock(2)` wrapper) used to take a
# cross-process advisory write lock around session / crypto-store-key /
# signing-key creation so a CLI-local `auth login` cannot lost-update a running
# daemon's data dir (issue #269). It composes with the workspace feature set.
nix = { workspace = true, features = ["fs"] }
rustix = { workspace = true }
signal-hook = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
# The daemon ships the matrix-sdk crypto stack in production builds (issue #240):
# `e2e-encryption` compiles end-to-end encryption (device keys, Megolm sessions,
# verification, cross-signing, key backup) and `bundled-sqlite` provides the
# vendored SQLite backend for the persistent, daemon-owned crypto store at
# `~/.local/share/mx-agent/crypto-store/`. Identity and sessions therefore
# survive a daemon restart instead of being regenerated in memory.
matrix-sdk = { workspace = true, features = ["e2e-encryption", "bundled-sqlite"] }
mime = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util"] }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }

[dev-dependencies]
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "test-util"] }
# The local Matrix integration test (tests/matrix_integration.rs) creates rooms
# and sends events against a live homeserver. It is `#[ignore]`d by default; see
# scripts/matrix_integration_test.sh. The crypto stack it needs
# (`e2e-encryption`) now ships in the production dependency above (issue #240),
# so no test-only feature override is required here.
#
# The E2EE integration test feeds decrypted privileged events through the real
# receive-side authorization pipeline, which needs the policy engine and the
# protocol event-type constants.
mx-agent-policy.workspace = true
mx-agent-protocol.workspace = true

[lints]
workspace = true
