[package]
name = "mx-agent-sandbox"
description = "Process sandboxing backends for mx-agent remote execution."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]

[lints]
workspace = true
