[package]
name = "mx-agent-sandbox"
description = "Process sandboxing backends for mx-agent remote execution."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tracing = { workspace = true }

# The launcher trampoline applies resource caps with `setrlimit` (issue #349),
# which needs nix's `resource` feature on top of the workspace defaults. Unix
# only, matching the rest of the crate's spawn machinery.
[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["resource"] }

[lints]
workspace = true
