[package]
name = "mx-agent-telemetry"
description = "Structured logging initialization and secret redaction for mx-agent."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
